k8s/flux/clusters/tal-clu-1/infra/observe/headlamp/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp-https
  namespace: headlamp
spec:
  parentRefs:
  - name: cilium-wildcard-hl-emerconn-com
    namespace: gateway-system
    sectionName: https
  hostnames:
  - headlamp.hl.emerconn.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: headlamp
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp-redirect
  namespace: headlamp
spec:
  parentRefs:
  - name: cilium-wildcard-hl-emerconn-com
    namespace: gateway-system
    sectionName: http
  hostnames:
  - headlamp.hl.emerconn.com
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
